9.6/src/api/public/debugging/profiler/lv_profiler_builtin_h.mdx
---
title: lv_profiler_builtin.h
description: API reference for lv_profiler_builtin.h
api:
  functions: [lv_profiler_builtin_config_init, lv_profiler_builtin_init, lv_profiler_builtin_uninit, lv_profiler_builtin_set_enable, lv_profiler_builtin_flush, lv_profiler_builtin_write]
  macros: [LV_PROFILER_BUILTIN_BEGIN_TAG, LV_PROFILER_BUILTIN_END_TAG, LV_PROFILER_BUILTIN_BEGIN, LV_PROFILER_BUILTIN_END]
---

<RelatedHeaders name="lv_profiler_builtin_private.h" isPrivate={false} />

<ApiSummary functions={6} macros={4} />

## Functions

<ApiTabs items={["Setters (1)","Other (5)"]}>
<ApiTab value="Setters (1)">

<ApiMember kind="function" name="lv_profiler_builtin_set_enable" file="public/debugging/profiler/lv_profiler_builtin.h" line={61} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L61">

### lv_profiler_builtin_set_enable

Enable or disable the built-in profiler.

```c
void lv_profiler_builtin_set_enable(bool enable)
```

<span className="sr-only">Parameters</span>

| Name | Type | Description |
|------|------|-------------|
| `enable` | `bool` | true to enable the built-in profiler, false to disable |


</ApiMember>

</ApiTab>
<ApiTab value="Other (5)">

<ApiMember kind="function" name="lv_profiler_builtin_config_init" file="public/debugging/profiler/lv_profiler_builtin.h" line={44} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L44">

### lv_profiler_builtin_config_init

Initialize the configuration of the built-in profiler.

```c
void lv_profiler_builtin_config_init(lv_profiler_builtin_config_t *config)
```

<span className="sr-only">Parameters</span>

| Name | Type | Description |
|------|------|-------------|
| `config` | <ApiLink name="lv_profiler_builtin_config_t" display="lv_profiler_builtin_config_t *" /> | Pointer to the configuration structure of the built-in profiler |


</ApiMember>

<ApiMember kind="function" name="lv_profiler_builtin_init" file="public/debugging/profiler/lv_profiler_builtin.h" line={50} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L50">

### lv_profiler_builtin_init

Initialize the built-in profiler with the given configuration.

```c
void lv_profiler_builtin_init(const lv_profiler_builtin_config_t *config)
```

<span className="sr-only">Parameters</span>

| Name | Type | Description |
|------|------|-------------|
| `config` | <ApiLink name="lv_profiler_builtin_config_t" display="const lv_profiler_builtin_config_t *" /> | Pointer to the configuration structure of the built-in profiler |


</ApiMember>

<ApiMember kind="function" name="lv_profiler_builtin_uninit" file="public/debugging/profiler/lv_profiler_builtin.h" line={55} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L55">

### lv_profiler_builtin_uninit

Uninitialize the built-in profiler.

```c
void lv_profiler_builtin_uninit(void)
```


</ApiMember>

<ApiMember kind="function" name="lv_profiler_builtin_flush" file="public/debugging/profiler/lv_profiler_builtin.h" line={66} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L66">

### lv_profiler_builtin_flush

Flush the profiling data to the console.

```c
void lv_profiler_builtin_flush(void)
```


</ApiMember>

<ApiMember kind="function" name="lv_profiler_builtin_write" file="public/debugging/profiler/lv_profiler_builtin.h" line={73} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L73">

### lv_profiler_builtin_write

Write the profiling data for a function with the given tag.

```c
void lv_profiler_builtin_write(const char *func, char tag)
```

<span className="sr-only">Parameters</span>

| Name | Type | Description |
|------|------|-------------|
| `func` | `const char *` | Name of the function being profiled |
| `tag` | `char` | Tag to associate with the profiling data for the function |


</ApiMember>

</ApiTab>
</ApiTabs>
## Macros

<ApiMember kind="macro" name="LV_PROFILER_BUILTIN_BEGIN_TAG" file="public/debugging/profiler/lv_profiler_builtin.h" line={27} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L27">

### LV_PROFILER_BUILTIN_BEGIN_TAG

```c
#define LV_PROFILER_BUILTIN_BEGIN_TAG(tag) \
    lv_profiler_builtin_write((tag), 'B')
```


</ApiMember>

<ApiMember kind="macro" name="LV_PROFILER_BUILTIN_END_TAG" file="public/debugging/profiler/lv_profiler_builtin.h" line={28} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L28">

### LV_PROFILER_BUILTIN_END_TAG

```c
#define LV_PROFILER_BUILTIN_END_TAG(tag) \
    lv_profiler_builtin_write((tag), 'E')
```


</ApiMember>

<ApiMember kind="macro" name="LV_PROFILER_BUILTIN_BEGIN" file="public/debugging/profiler/lv_profiler_builtin.h" line={29} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L29">

### LV_PROFILER_BUILTIN_BEGIN

```c
#define LV_PROFILER_BUILTIN_BEGIN LV_PROFILER_BUILTIN_BEGIN_TAG(__func__)
```


</ApiMember>

<ApiMember kind="macro" name="LV_PROFILER_BUILTIN_END" file="public/debugging/profiler/lv_profiler_builtin.h" line={30} url="https://github.com/lvgl/lvgl/tree/b6ed933feaa45839afabbe3de15a1d882a9e00dc/include/lvgl/debugging/profiler/lv_profiler_builtin.h#L30">

### LV_PROFILER_BUILTIN_END

```c
#define LV_PROFILER_BUILTIN_END LV_PROFILER_BUILTIN_END_TAG(__func__)
```


</ApiMember>

## Dependencies

<FileIncludes
  includes={["lv_conf_internal.h", "lv_types.h"]}
  includedBy={["lvgl.h"]}
/>